--- a/src/sass/partials/_main.sass
+++ b/src/sass/partials/_main.sass
@@ -8,13 +8,17 @@ html
 
 body
   // background: url('https://66.media.tumblr.com/d51a2a2502f70238adbb0c242c4e89dd/tumblr_ocqdob8xcZ1s8iqo7o1_1280.gif') no-repeat
-  background: url('../img/marvel_black_panther_HiRes.jpg')
+  //background: url('../img/marvel_black_panther_HiRes.jpg')
   //background: url('../img/BlackPanther_6cover-Recovered.jpg')
   background-size: 100% 100%
   //background-size: cover
   +at-breakpoint($phone)
     background: black
     background: url('../img/mobile-version.jpg')
+
+.bg-wrapper 
+  height: 1000px
+  background: url('../img/mobile-version.jpg')
 
 .pageOne 
   width: 240px
