current splash page

--- a/src/sass/partials/_main.sass
+++ b/src/sass/partials/_main.sass
@@ -14,18 +14,33 @@ body
   //background-size: cover
   +at-breakpoint($phone)
     background: black
-    background: url('../img/mobile-version.jpg')
+    //background: url('../img/mobile-version.jpg')
+    z-index: 99999
+
 
 .bg-wrapper 
   height: 1000px
   background: url('../img/mobile-version.jpg')
+  +at-breakpoint($iphone)
+    //+span-columns(12)
+    width: 97%
+    background: url('../img/mobile-version.jpg')
+    z-index: -1
+    height: 600px
+    
+.mybutton
+  background: #444
+  color: #ccc
+  padding: 1em
+  cursor: pointer
 
 .pageOne 
-  width: 240px
+  font-family: Arial, sans-serif
+  width: 230px
   height: 320px
   background: #333
   padding: 1em
-  color: yellow
+  color: #ccc
   margin-top: 1em
   margin-left: auto
   margin-right: auto
@@ -35,13 +50,15 @@ body
   -o-transition: 1s right ease
   transition: 1s right ease
   box-shadow: 0 0 5px rgba(0, 0, 0, .5)
+  opacity: 0.9
   
 .pageTwo
+  font-family: Arial, sans-serif
   width: 320px
   height: 240px
-  background: red
+  background: #333
   padding: 1em
-  color: yellow
+  color: #ccc
   margin-top: 1em
   margin-left: auto
   margin-right: auto
@@ -51,3 +68,4 @@ body
   -o-transition: 1s left ease
   transition: 1s left ease
   box-shadow: 0 0 5px rgba(0, 0, 0, .5)
+  opacity: 0.9
