--- a/src/sass/partials/_main.sass
+++ b/src/sass/partials/_main.sass
@@ -7,41 +7,60 @@ html
   height: 100%
 
 body
-  background: url('https://66.media.tumblr.com/d51a2a2502f70238adbb0c242c4e89dd/tumblr_ocqdob8xcZ1s8iqo7o1_1280.gif') no-repeat
+  //background: url('https://66.media.tumblr.com/d51a2a2502f70238adbb0c242c4e89dd/tumblr_ocqdob8xcZ1s8iqo7o1_1280.gif') no-repeat
   //background: url('../img/background.jpg')
   background-size: 100% 100%
-  //background-size: cover
+  font-family: Arial
   +at-breakpoint($phone)
-    background: black
+    background: #666
 
-.pageOne 
-  width: 240px
-  height: 320px
+p
+  color: #333
+  
+.mainScrn
+  +span-columns(8)
   background: #333
   padding: 1em
-  color: yellow
+  color: #ccc
   margin-top: 1em
   margin-left: auto
   margin-right: auto
-  -webkit-transition: 1s right ease
-  -moz-transition: 1s right ease
-  -ms-transition: 1s right ease
-  -o-transition: 1s right ease
-  transition: 1s right ease
   box-shadow: 0 0 5px rgba(0, 0, 0, .5)
-  
-.pageTwo
-  width: 320px
-  height: 240px
-  background: red
+  +at-breakpoint($phone)
+    +span-columns(12)
+
+.btn
+  background: #c72a35
+  padding: 0.5em
+  font-size: 1em
+  color: #ccc
+  cursor: pointer
+  +span-columns(12)
+
+.btn-hilite
+  background: #333
+  padding: 0.5em
+  font-size: 1em
+  color: #ccc
+  cursor: pointer
+  +span-columns(12)
+
+.btn-right 
+  float: right
+
+.btn25
+  +span-columns(4)
+  float: right
+  margin: 1em
+  background: #c72a35
+  padding: 0.5em
+  font-size: 1em
+  color: #ccc
+  cursor: pointer
+
+.sidePanel
+  +span-columns(4)
+  background: gray
   padding: 1em
-  color: yellow
-  margin-top: 1em
-  margin-left: auto
-  margin-right: auto
-  -webkit-transition: 1s left ease
-  -moz-transition: 1s left ease
-  -ms-transition: 1s left ease
-  -o-transition: 1s left ease
-  transition: 1s left ease
-  box-shadow: 0 0 5px rgba(0, 0, 0, .5)
+  +at-breakpoint($phone)
+    +span-columns(12)
